--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             <button class="button_add">Add</button>
         </div>
         <div class = "cell_list">
-            <!-- <div class="cell">
-                <input type="checkbox">
-                <span>Lorem ipsum dolor sit </span>
-                <input type="checkbox" class="checkbox_right">
-            </div> -->
+        </div>
+        <div>
+            Show only unchecked <input type="checkbox" id="showUnchecked">
+            <button id="clearAll" class="button_add">Clear all</button>
         </div>
     </div>
 </section>
